# lcli

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml  test.yml
src/: main.rs
src/clients/: cli.rs  cli_client.rs  linear_client.rs  mod.rs  network.rs
src/config/: constants.rs  get_query.graphql  linear.graphql  post_comment.graphql
src/constants/: errors.rs  graph_ql.rs  mod.rs  network.rs  texts.rs
src/models/: comment.rs  issue.rs  linear.rs  mod.rs
src/requests/: get_issue.rs  linear_client.rs  mod.rs  post_comment.rs
src/utils/: misc.rs  mod.rs  print_table.rs
