[package]
name = "lcli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
prettytable = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pico-args = "0.5.0"
ureq = { version = "3.3.0", features = ["json"] }


[profile.release]
codegen-units = 1
strip = true
opt-level = "z"
lto = true
panic = "abort"
